# epuck-player-driver

./: CMakeLists.txt  CameraConfiguration.md  ProjectHome.md  README  README.md
epuckSide/: CMakeLists.txt  README  README.md  compile.py  genhex.py  link.py
epuckSide/program/epuckSide-complete/: epuckPlayer.c  main_c.c  memory.h
epuckSide/program/epuckSide-complete/epuckSide.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
playerSide/: CMakeLists.txt
